# agent-to-agent-protocol

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
agents/: greeting.py  orchestrator.py  tell_time.py
agents/variants/adk/: agent.py
agents/variants/langgraph/: agent.py
client/: app.py
config/: agent_registry.json  settings.py
core/: models.py  server.py
scripts/: check_models.py
utilities/: discovery.py
