[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "poc-a2a"
version = "1.0.0"
description = "Agent-to-Agent (A2A) Protocol POC — multi-framework agent interoperability using Google ADK and LangGraph"
requires-python = ">=3.11"
readme = "README.md"

[tool.setuptools.packages.find]
where = [".."]
include = ["POC_A2A*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
